cleared some bugs and regenerated swagger
